--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -21,6 +21,10 @@ section	{
 	padding: 20px;
 	background: #fff;
 }
+
+section h1 {
+	font-size: 200%;
+}
 /*
 Links*/
 
@@ -56,7 +60,7 @@ nav ul {
 nav ul li {
 	list-style-type: none;
 	display: inline-block;
-	padding: 0.2em;
+	padding: 0.2em 0;
 }
 
 nav ul li a {
